# nexvpn

./: .gitignore  .impeccable.md  CLAUDE.md  LICENSE  README.md  README_RU.md  download-cores.sh  index.html  pack-portable.ps1  package-lock.json  package.json  presets.json  sign-apk.bat  tsconfig.json
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
flatpak/: build-flatpak.sh  com.horusvpn.nexvpn.desktop  com.horusvpn.nexvpn.metainfo.xml  com.horusvpn.nexvpn.yml  nexvpn-wrapper.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_logger.rs  commands.rs  lib.rs  main.rs
src-tauri/src/core/: manager.rs  mod.rs  singbox.rs  xray.rs
src-tauri/src/proxy/: link_parser.rs  mod.rs  models.rs  subscription.rs
src-tauri/src/system/: hwid.rs  mod.rs  proxy_setter.rs
src-tauri/src/testing/: ping.rs
src/api/: tauri.ts
src/components/home/: AnnounceBanner.tsx  QuickConnect.tsx  ServerCard.tsx  ServerList.tsx  StatusPanel.tsx  TrafficPanel.tsx  WorldMap.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/logs/: LogsPage.tsx
src/components/onboarding/: OnboardingOverlay.tsx
src/components/privacy/: PrivacyPage.tsx
src/components/routing/: RoutingPage.tsx
src/context/: AppContext.tsx
src/hooks/: useStatus.ts  useTheme.ts  useTraffic.ts
src/i18n/: translations.ts
src/themes/: themes.ts
src/utils/: confirm.ts  countryUtils.ts  geoCoords.ts  geoData.ts  worldMapPaths.ts
(+16 files in other folders)
