[package]
name = "nexvpn"
version = "1.0.0"
description = "Open-source VPN client with multi-protocol support"
authors = ["HorusVPN"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1"
dirs = "5"
winreg = "0.52"
